[package]
name = "bespokeTesting"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20.0"
wgpu_text = "0.8.8"
bespoke-engine = { path = "../bespoke-engine" }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
bytemuck = { version = "1.14.3", features=["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.3"

[build-dependencies]
bespoke-engine = { path = "../bespoke-engine" }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.30.0"